--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "aos": "^2.3.4",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.1",
     "normalize.css": "^8.0.1"
